--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@
 version: 2.1
 orbs:
   node: circleci/node@5
+  browser-tools: circleci/browser-tools@1.2.3
 jobs:
   build-node:
     # Build node project
@@ -23,6 +24,11 @@ jobs:
       - store_artifacts:
           path: ~/artifacts
           destination: node-build
+      - browser-tools/install-chrome
+      - run: npm install
+      - run: npm run build
+      - run: npm install -g @lhci/cli@0.14.x
+      - run: npx lhci autorun --chrome-flags="--no-sandbox --ignore-certificate-errors" 
   deploy:
     # This is an example deploy job, not actually used by the workflow
     docker:
