--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,9 @@ jobs:
           path: ~/artifacts
           destination: node-build
       - browser-tools/install-chrome
+      - store_artifacts:
+      path: .lighthouseci
+      destination: lighthouse-report
       - run: npm install
       - run: npm run build
       - run: npx lhci autorun --chrome-flags="--no-sandbox --ignore-certificate-errors" 
