--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
           destination: lighthouse-report
       - run: npm install
       - run: npm run build
-      - run: npx lhci autorun --chrome-flags="--no-sandbox --ignore-certificate-errors" 
+      - run: npx lhci autorun 
   deploy:
     # This is an example deploy job, not actually used by the workflow
     docker:
