--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,9 +32,12 @@ jobs:
       - run: 
           name: Run Lighthouse CI
           command: npx lhci autorun --chrome-flags="--no-sandbox --ignore-certificate-errors" 
+      - run: 
+          name: Start Xvfb
+          command: Xvfb :99 -screen 0 1920x1080x24 &
       - run:
            name: Run Cypress tests with Percy
-           command: npx percy exec -- cypress run
+           command: DISPLAY=:99 npx percy exec -- cypress run
   deploy:
     # This is an example deploy job, not actually used by the workflow
     docker:
