--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@ orbs:
 jobs:
   build-node:
     # Build node project
-    executor: node/default
+    docker:
+      - image: cypress/included:12.7.0
     steps:
       - checkout
       - node/install-packages:
@@ -36,8 +37,15 @@ jobs:
           name: Start Xvfb
           command: Xvfb :99 -screen 0 1920x1080x24 &
       - run:
-           name: Run Cypress tests with Percy
-           command: DISPLAY=:99 npx percy exec -- cypress run
+           name: Set DISPLAY variable
+           command: export DISPLAY=:99
+      - run:
+           name: Install Xvfb
+           command: sudo apt-get install -y xvfb
+      - run:
+        name: Run Cypress with Percy
+        command: percy exec -- cypress run
+
   deploy:
     # This is an example deploy job, not actually used by the workflow
     docker:
