--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,12 @@ jobs:
       - node/install-packages:
           pkg-manager: npm
       - run:
+          name: Install Cypress
+          command: npm install --save-dev cypress
+      - run:
+          name: Verify Cypress installation
+          command: npx cypress --version
+      - run:
           command: npm run build
       - run:
           name: Create the ~/artifacts directory if it doesn't exist
